# Python_module_Gitlab-Parser

./: MANIFEST.in  README.md  pyproject.toml  pytest.ini
GitlabParser/: __init__.py  gitlab.py  logger.py
tests/: conftest.py  test_gitlab.py
