[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GitlabParser"
version = "1.0.2"
license = {text = "MIT"}
authors = [
    {name="Vitaly Kargin", email="super_set@mail.ru"},
]
description = "Gitlab Parser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/superset1/Python_module_Gitlab-Parser"

[tool.setuptools]
packages = ["GitlabParser"]
